methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:6: error: not enough arguments for method isFacingTrail: (couleurVoulue: java.awt.Color)Boolean.
Unspecified value parameter couleurVoulue.
    if (isFacingTrail()) {
                     ^SlugSnail:9: error: not found: value marqueCase
      marqueCase()
      ^