methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
  
	while(!estSurBiscuit()) {
      
  	if (isFacingTrail()) {
        
      avance()
      marqueCase()


    } else {

      gauche()

    }

  }
  prendBiscuit()
}

def isFacingTrail(couleurVoulue:Color):Boolean = {
  if (estFaceMur()) {
    
    return false
    
  } else { // On est pas face à un mur : on peut voir devant si il y a une case verte
  	var couleur:Color = null
    avance()
    couleur = getCouleurSol()
    recule()
    return couleur == couleurVoulue
    
  }
  
}